[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/widgets/oscilloscope.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/wave_designer/plotter.gd" type="Script" id=2]
[ext_resource path="res://ui/widgets/play_button.gd" type="Script" id=3]
[ext_resource path="res://theme/editor.png" type="Texture" id=6]

[sub_resource type="AudioStreamSample" id=1]
loop_mode = 1

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 6 )
region = Rect2( 96, 112, 16, 16 )

[node name="Plotter" type="Container"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Oscilloscope" parent="." instance=ExtResource( 1 )]
bg_color = Color( 0, 0, 0.12549, 1 )
left_color = Color( 1, 0, 0, 1 )
right_color = Color( 0, 1, 0, 1 )
dc_line = true
dc_line_color = Color( 1, 1, 1, 0.25098 )

[node name="Player" type="AudioStreamPlayer" parent="."]
stream = SubResource( 1 )

[node name="Control" type="HBoxContainer" parent="."]
margin_left = 8.47565
margin_top = 8.0
margin_right = 146.476
margin_bottom = 35.0
focus_mode = 1
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Frequency" type="SpinBox" parent="Control"]
margin_right = 96.0
margin_bottom = 24.0
rect_min_size = Vector2( 96, 0 )
size_flags_horizontal = 0
size_flags_vertical = 0
min_value = 1.0
max_value = 16000.0
value = 220.0
suffix = "Hz"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="Control"]
margin_left = 100.0
margin_right = 128.0
margin_bottom = 27.0
mouse_filter = 1
toggle_mode = true
shortcut_in_tooltip = false
icon = SubResource( 2 )
script = ExtResource( 3 )
accent_color = Color( 1, 2, 1, 1 )
pressed_icon = "Stop"
unpressed_icon = "Play"
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Control/Frequency" to="." method="_on_mouse_entered"]
[connection signal="value_changed" from="Control/Frequency" to="." method="_on_Frequency_value_changed"]
[connection signal="toggled" from="Control/Play" to="." method="_on_Play_toggled"]
